# NC-Edit7

./: .dockerignore  .eslintrc.cjs  .gitignore  AZURE_DEPLOYMENT.md  BUILD_IMPLEMENTATION_SUMMARY.md  BUILD_SUMMARY.md  CLOUD_AGENT_DELEGATION.md  DEVELOPMENT.md  LICENSE  README.md  ThirdPartyNotices.txt  UNCOMMITTED_CHANGES_FEATURE.md  build-plan.md  copilot_instruction.md  debug_run.py  demo-screenshot.md  dev-cgi-proxy.js  docker-compose.yml  eval_final.py  eval_test.py  final-implementation-plan.md  index.html  package-lock.json  package.json  parse_test.py  rebuild-plan.md  requirements.txt  run_test_issue.py  test.html  test3.py  test_fix_formula.py  test_fix_formula2.py  test_list_machines.json  test_parse.js  test_parser_fix.py  test_user_snippet.py  test_var.py  test_var2.py  test_var3.py  tests_while_goto.py  (+13 more)
css/: ace.css  (+3 more)
ncplot7py/: .gitignore  README.md  READMEold.md  SIEMENS_BUILD_PLAN.md  dev-requirements.txt  pyproject.toml  test_cgi.py  test_user_snippet.py
ncplot7py/.github/: COPILOT_INSTRUCTIONS.md
ncplot7py/.github/workflows/: ci.yml
ncplot7py/config/: machines.json
ncplot7py/data/nc-examples/: O0004  O6POINT  siemens_5axis_complex.mpf  siemens_arcs_comp.mpf  user_siemens_program.mpf
ncplot7py/docs/: CGI_API.md  CODING_GUIDELINES.md
ncplot7py/scripts/: cgiserver.cgi  run_example_O0004.py  run_example_O6POINT.py  run_example_O6POINT_D.py  run_siemens_example.py  run_user_siemens_program.py
ncplot7py/src/ncplot7py/: __init__.py
ncplot7py/tests/integration/: test_example_O0004.py  test_fanuc_cornering.py  test_fanuc_if_goto_false_reset.py  (+29 more)
(+281 files in other folders)
